--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -70,3 +70,18 @@ div:focus {
 .fr {
   float: right;
 }
+.fl {
+  float: left;
+}
+.m-b-20 {
+  margin-bottom: 20px;
+}
+.text-r {
+  text-align: right;
+}
+.input-w-150 {
+  width: 200px;
+}
+.m-r-5 {
+  margin-right: 5px;
+}
