--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -64,6 +64,10 @@ div:focus {
   padding: 20px;
 }
 
+.search-content {
+  margin-bottom: 20px;
+}
+
 .pagination-container {
   margin-top: 30px;
 }
