考试课程维护

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -69,23 +69,29 @@ div:focus {
 }
 
 .pagination-container {
-  margin-top: 30px;
+  margin: 15px 0;
 }
+
 .fr {
   float: right;
 }
+
 .fl {
   float: left;
 }
+
 .m-b-20 {
   margin-bottom: 20px;
 }
+
 .text-r {
   text-align: right;
 }
+
 .input-w-150 {
   width: 200px;
 }
+
 .m-r-5 {
   margin-right: 5px;
 }
